warracker-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warracker-1
  namespace: warracker-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warracker-1
  template:
    metadata:
      labels:
        app: warracker-1
    spec:
      containers:
        - name: warracker-1
          image: ghcr.io/sassanix/warracker/main:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "400m"
            requests:
              memory: 256Mi
              cpu: "200m"
          volumeMounts:
            - name: uploads-data
              mountPath: /data/uploads
      volumes:
        - name: uploads-data
          persistentVolumeClaim:
            claimName: warracker-1-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: warracker-1
  namespace: warracker-1
spec:
  selector:
    app: warracker-1
  ports:
    - port: 80
      targetPort: 80
      name: http
