warracker-1/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: warracker-1
  namespace: warracker-1
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`warracker.pimonlab.xyz`)
      priority: 10
      services:
        - name: warracker-1
          namespace: warracker-1
          port: 80
  tls:
    secretName: warracker-1-ts-secret
